<resources>
    <string name="app_name">Visual Life Configurator</string>
    <string name="title_activity_automata_home">AutomataHomeActivity</string>
    <string name="tab_cells">Cells</string>
    <string name="tab_configuration">Configuration</string>
    <string name="tab_play">Play</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="automata_home_placeholder">{automata home page}</string>
    <string name="default_text">Default:</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="button_saved">Saved</string>
    <string name="button_random">Random</string>
    <string name="neighbours">Neighbours</string>
    <string name="automata_map">%1$s maps</string>
    <string name="neighbours_with_name">%1$s neighbours</string>
    <string name="color">Color</string>
    <string name="neighbours_count_placeholder">{{0}}</string>
    <string name="cell_type_placeholder">Cell type</string>
    <string name="title_activity_configuration">ConfigurationActivity</string>
    <string name="cell_configuration_expl">Depends on the number of</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_cell_choosing_text">Please choose a cell type</string>
    <string name="title_activity_saved_maps">SavedMapsActivity</string>
    <string name="map_name_placeholder">Map name placeholder</string>
    <string name="map_last_used_date_placeholder">January 31st, 2019</string>
    <string name="title_activity_map_playing">MapPlayingActivity</string>
    <string name="play">Play</string>
    <string name="forward">Forward</string>
    <string name="pause">Pause</string>
    <string name="increase_size">Increase size</string>
    <string name="decrease_size">Decrease size</string>
    <string name="compatible_maps">Compatible maps:</string>
    <string name="reset_default_games">Reset default games</string>
</resources>
