<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".AutomataHomeActivity">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_text" />

        <fr.ttvp.visuallifeconfigurator.AutomataCellInListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </fr.ttvp.visuallifeconfigurator.AutomataCellInListView>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider" />

        <fr.ttvp.visuallifeconfigurator.AutomataCellInListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </fr.ttvp.visuallifeconfigurator.AutomataCellInListView>

        <fr.ttvp.visuallifeconfigurator.AutomataCellInListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </fr.ttvp.visuallifeconfigurator.AutomataCellInListView>
        <fr.ttvp.visuallifeconfigurator.AutomataCellInListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </fr.ttvp.visuallifeconfigurator.AutomataCellInListView>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_add_white_24dp" />

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/automata_home_placeholder">

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TabItem
                android:id="@+id/tabCells"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_cells" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabConfiguration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_configuration" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_play" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>